Changed the displaying of tables.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,17 +1,49 @@
 ﻿
 @model ReportModelView
 
-@foreach (var entry in Model.sortedEntries)
-{
-    <table class="table table-bordered table-sm table-dark align-middle border border-5">
-        <tbody >
-        @foreach (var item in entry.Value)
+<div class="row">
+    <div class="col-md-6">
+        @foreach (var entry in Model.sortedEntries.Take(Model.sortedEntries.Count / 2))
         {
-            <tr class="border border-3">
-                <td class="border border-3">@item.TypeName</td>
-                <td class="border border-3">@item.Name</td>
-            </tr>
+            <table class="table table-bordered table-sm table-dark align-middle border border-5">
+                <thead>
+                    <tr class="border border-3">
+                        <th scope="col" class="border border-3">Тип объекта</th>
+                        <th scope="col" class="border border-3">Наименование объекта</th>
+                    </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                @foreach (var item in entry.Value)
+                {
+                    <tr class="border border-3">
+                        <td class="border border-3">@item.TypeName</td>
+                        <td class="border border-3">@item.Name</td>
+                    </tr>
+                }
+                </tbody>
+            </table>
         }
-        </tbody>
-    </table>
-}
+    </div>
+    <div class="col-md-6">
+        @foreach (var entry in Model.sortedEntries.Skip(Model.sortedEntries.Count / 2))
+        {
+            <table class="table table-bordered table-sm table-dark align-middle border border-5">
+                <thead>
+                    <tr class="border border-3">
+                        <th scope="col" class="border border-3">Тип объекта</th>
+                        <th scope="col" class="border border-3">Наименование объекта</th>
+                    </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                @foreach (var item in entry.Value)
+                {
+                    <tr class="border border-3">
+                        <td class="border border-3">@item.TypeName</td>
+                        <td class="border border-3">@item.Name</td>
+                    </tr>
+                }
+                </tbody>
+            </table>
+        }
+    </div>
+</div>
